<resources>
    <string name="app_name">Task Manager</string>
    <string name="msgBienvenida">Bienvenido</string>
    <string name="loginTV2">Ingresa tus datos</string>
    <string name="usuarioLogin">Ingresa tu nombre de usuario</string>
    <string name="contrasenaLogin">Ingresa tu contraseña</string>
    <string name="btnLogin">Iniciar sesion</string>
    <string name="btnRegister">Registrarse</string>
    <string name="msgRegistro">Registro</string>
    <string name="taskNombre">Nombre de la tarea</string>
    <string name="taskDescription">Descripcion de la tarea</string>
    <string name="taskDate">Fecha limite de la tarea</string>
    <string name="msgNewTask">Nueva tarea</string>
    <string name="btnAdd">Añadir tarea</string>
    <string name="taskTime">Hora limite para la tarea</string>
    <string name="taskTier">Elige la importancia de la tarea</string>
    <string name="btnCompletar">Terminar tarea</string>
    <string name="btnEliminar">Eliminar la tarea</string>
</resources>