<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Amarillo">


        <ImageView
            android:layout_width="437dp"
            android:layout_height="419dp"
            android:background="@drawable/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-13dp"></ImageView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/soft_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineH"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineVLeft"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.1" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineVRight"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.90" />

                <TextView
                    android:id="@+id/registroTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:padding="5dp"
                    android:text="@string/msgRegistro"
                    android:textColor="@color/Negro"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/guidelineVLeft"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/loginTV2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="5dp"
                    android:text="@string/loginTV2"
                    android:textColor="@color/Amarillo"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/guidelineVLeft"
                    app:layout_constraintTop_toBottomOf="@+id/registroTV" />

                <EditText
                    android:id="@+id/userEdit"
                    android:layout_width="328dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="28dp"
                    android:background="@drawable/edit_border"
                    android:hint="@string/usuarioLogin"
                    android:autofillHints="username"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/GrisOb"
                    android:textColorHint="@color/GrisOb"
                    app:layout_constraintEnd_toStartOf="@id/guidelineVRight"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/guidelineVLeft"
                    app:layout_constraintTop_toBottomOf="@id/loginTV2" />

                <EditText
                    android:id="@+id/passEdit"
                    android:layout_width="328dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/edit_border"
                    android:hint="@string/contrasenaLogin"
                    android:autofillHints="password"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:textColor="@color/GrisOb"
                    android:textColorHint="@color/GrisOb"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@id/guidelineVRight"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/guidelineVLeft"
                    app:layout_constraintTop_toBottomOf="@id/userEdit" />


                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="160dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="44dp"
                    android:background="@drawable/btn_border"
                    android:gravity="center"
                    android:text="@string/btnRegister"
                    android:textColor="@color/Negro"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guidelineVRight"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toEndOf="@id/guidelineVLeft"
                    app:layout_constraintTop_toBottomOf="@+id/passEdit" />


        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
